--- a/notebooks/chapter03-simple-llm-app.ipynb
+++ b/notebooks/chapter03-simple-llm-app.ipynb
@@ -618,7 +618,7 @@
    "source": [
     "\n",
     "messages_history =  [\n",
-    "    HumanMessage(\"おっす!僕はBigBaBy!BBと呼んでね\"),\n",
+    "    HumanMessage(\"僕はBigBaBy!BBと呼んでね\"),\n",
     "    AIMessage(\"分かりました。あなたのことをBBと呼びます\"),\n",
     "    ]\n",
     "chain.invoke({\"msgs\": messages_history,\"query\":\"僕は誰ですか？\"})"
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -635,14 +635,14 @@
        "{'name': '岸田 文雄', 'nickname': 'キッシー'}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "messages_history =  []\n",
-    "chain.invoke({\"msgs\": messages_history,\"query\":\"総理大臣は誰ですか？\"})"
+    "chain.invoke({\"msgs\": [],\"query\":\"総理大臣は誰ですか？\"})"
    ]
   }
  ],
