--- a/notebooks/handson-02-prompt-management.ipynb
+++ b/notebooks/handson-02-prompt-management.ipynb
@@ -36,7 +36,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "import os, warnings\n",
+    "\n",
+    "# おまじない\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "endpoint = \"http://langfuse-server:3000\"\n",
     "public_key = os.getenv(\"PUBLIC_KEY\")\n",
