--- a/notebooks/chapter03-simple-llm-app-with-rag.ipynb
+++ b/notebooks/chapter03-simple-llm-app-with-rag.ipynb
@@ -264,25 +264,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(metadata={'source': '../app/docs/karubikuppa.txt'}, page_content='BB流カルビクッパの作り方です。\\n\\nまずは、以下の材料を用意します。なお、材料は2人分です。\\n\\n- 牛肉: 50g\\n- 大根: 半分\\n- 人参: 1本\\n- シイタケ: 2-3個\\n- ニンニク: 半分\\n- もやし: 1袋\\n- ニラ: 半分\\n- ぜんまい: 40g\\n    - BB流ポイント 「入れなくても良いですが、入れると@<ttb>{めちゃ旨}です！」\\n- つゆ (*)\\n    - 水: 800cc\\n    - コチュジャン: 大さじ2\\n        - BB流ポイント「入れれば入れるだけ美味しい！」\\n    - ウェイパー: 大さじ2\\n    - ごま油: 大さじ2\\n        - BB流ポイント「入れれば入れるだけ美味しい！」\\n    - 酒: 大さじ2\\n    - 醤油: 大さじ2\\n    - 砂糖: 大さじ2\\n- 塩コショウ:適量\\n- 卵: 2個\\n\\nごま油でニンニクを炒め、香りが出たら牛肉を炒めます。つゆ（*）をいれ、ニラともやし以外を入れてひと煮立ちさせます。\\n最後にニラともやしを入れてある程度シャキシャキ感を残しつつ、卵をふんわりさせたらBB流カルビクッパの完成です！\\nなお、卵をふんわりさせるコツはつゆを限界まで沸騰させることです！\\n'),\n",
-       " Document(metadata={'source': '../app/docs/spice-curry.txt'}, page_content='BB流のスパイスカレーのレシピです。\\n\\nまずは、以下の材料を用意します。なお、材料は2人分です。\\n\\n- 鶏モモ肉皮なし: 200g\\n- たまねぎ1/2: 110g\\n- にんにく: 4g（チューブ8㎝）\\n- しょうが: 4g（チューブ8㎝）\\n- 塩: 2g\\n- オリーブ油: 8ｇ\\n- トマト缶1/3: 60g\\n- カレー粉: 5g\\n- ガラムマサラ: 1g\\n- ケチャップ: 18g\\n- ウスターソース: 18g\\n\\n作り方は以下の通りです。\\n\\n1. 玉ねぎを粗みじんに切る\\n2. 鶏モモは皮を外し一口大に切る\\n3. 鍋にオリーブオイルを熱したまねぎ、にんにく、しょうが、塩をいれ中火で炒める\\n4. たまねぎが半透明になったらトマト缶とカレースバイスを入れる\\n5. 強火にかけ全体を混ぜる\\n6. 鶏モモ肉、水100㎖、ケチャップ、ウスターソースを加え蓋をして中火で煮る\\n7. 鶏肉に火が通ったら蓋をとり好みのトロミ具合になるまで煮る\\n\\n鶏モモでのレシピですが、鶏むね肉やサバ缶、ノンオイルツナ缶へ変えると\\nより脂質を減らせアレンジできます\\n是非作ってみてくださいね\\n'),\n",
-       " Document(metadata={'source': '../app/docs/hoiruyaki.txt'}, page_content='BB流の究極のホイル焼きレシピの作り方です。\\n\\n材料\\n- アスパラガス3，4本\\n- ハーフベーコン2枚\\n- 塩\\n- ピザ用チーズ\\n- 黒胡椒\\n\\n作り方は以下の通りです。\\n\\n1. アスパラは根元の皮を剥き食べやすい長さに切る\\n2. 耐熱容器にアスパラを入れてラップを掛けて600Wの電子レンジで3分、塩を振って味を調える\\n3. アルミホイルで器を作り、アスパラと1センチ幅に切ったベーコンを入れる\\n4. ピザ用チーズを掛けてオーブントースターでチーズが溶けるまで加熱\\n5. 仕上げに黒胡椒を掛けて完成\\n\\nぜひ試してみてください\\n'),\n",
-       " Document(metadata={'source': '../app/docs/kinoko-marine.txt'}, page_content='BB流きのこマリネの作り方です。\\n\\nまずは、以下の材料を用意します。なお、材料は2人分です。\\n\\n- お好きなきのこ\\n    - 複数種類用意するととても美味しいです\\n    - BB的には、エリンギ、椎茸、マッシュルーム、しめじ、舞茸、平茸などがおすすめです\\n- バター（無塩）: 10g\\n- にんにく: 1個\\n- マリネ用のたれ (*)\\n    - マスタード: 大さじ2\\n    - 白ワインビネガー: 大さじ1~2\\n    - ケッパー: 15粒程度\\n- パセリ: お好きな方はたくさん\\n\\nフライパンにオリーブオイルをひき、強火できのこを炒めます。ある程度炒まったらちょっと効き過ぎなんじゃないの？ってくらい塩を加えます。\\n火を弱め、きのこをフライパンの端によせ、バターとにんにくを入れ、香りを立たせます。\\nあらかじめ合わせておいたマリネ用のタレと合わせたら完成です！\\nぜひ、お酒と合わせて嗜んでください！白ワイン、ビール、ハイボールとお酒泥棒になること間違いなしでしょう。\\n')]"
+       "[Document(metadata={'source': '../app/docs/karubikuppa.txt'}, page_content='BB流カルビクッパの作り方です。\\n\\nまずは、以下の材料を用意します。なお、材料は2人分です。\\n\\n- 牛肉: 50g\\n- 大根: 半分\\n- 人参: 1本\\n- シイタケ: 2-3個\\n- ニンニク: 半分\\n- もやし: 1袋\\n- ニラ: 半分\\n- ぜんまい: 40g\\n    - BB流ポイント 「入れなくても良いですが、入れると@<ttb>{めちゃ旨}です！」\\n- つゆ (*)\\n    - 水: 800cc\\n    - コチュジャン: 大さじ2\\n        - BB流ポイント「入れれば入れるだけ美味しい！」\\n    - ウェイパー: 大さじ2\\n    - ごま油: 大さじ2\\n        - BB流ポイント「入れれば入れるだけ美味しい！」\\n    - 酒: 大さじ2\\n    - 醤油: 大さじ2\\n    - 砂糖: 大さじ2\\n- 塩コショウ:適量\\n- 卵: 2個\\n\\nごま油でニンニクを炒め、香りが出たら牛肉を炒めます。つゆ（*）をいれ、ニラともやし以外を入れてひと煮立ちさせます。\\n最後にニラともやしを入れてある程度シャキシャキ感を残しつつ、卵をふんわりさせたらBB流カルビクッパの完成です！\\nなお、卵をふんわりさせるコツはつゆを限界まで沸騰させることです！\\n')]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "retriever = vector_store.as_retriever()\n",
+    "retriever = vector_store.as_retriever(search_kwargs={\"k\": 1})\n",
     "retriever.invoke(\"カルビクッパ\")"
    ]
   },
