--- a/notebooks/chapter05-02-prompt-management.ipynb
+++ b/notebooks/chapter05-02-prompt-management.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,9 +85,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<langfuse.model.TextPromptClient at 0x7500c82e9ca0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prompt = \"\"\"\n",
     "以下のコンテキストに基づいて質問に対する回答を作成してください。\n",
@@ -124,9 +135,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<langfuse.model.TextPromptClient at 0x7500c82e9ee0>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prompt = \"\"\"\n",
     "以下のコンテキストに基づいて質問に対する回答をBBっぽく作成してください。\n",
